# CozyCritters

./: .env.example  .gitignore  README.md  auth.py  config.py  database.py  main.py  pyproject.toml
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: AnimatedCritter.jsx  CloudLogo.jsx  CloudNavigation.jsx  CollectibleCard.jsx  CozyCrittersLogo.jsx  CritterAvatar.jsx  DialogueBubble.jsx  DraggableFloatingObject.jsx  DreamyBackground.jsx  FloatingActionButton.jsx  FloatingHearts.jsx  FloatingIslandEnvironment.jsx  InteractivePet.jsx  Jelly3DButton.jsx  MovablePet.jsx  PetSanctuaryDiorama.jsx  StatBar.jsx
frontend/src/components/UI/: Button.jsx  Card.jsx
frontend/src/pages/: CritterGallery.jsx  Dashboard.jsx  Landing.jsx  Login.jsx  PetGameHub.jsx  Profile.jsx  Signup.jsx
frontend/src/services/: api.js
frontend/src/utils/: sound.js
